Dbh2FullTest 初始运行通过。重复打开还有问题。